[gd_scene load_steps=2 format=3 uid="uid://0384bd0gxlij"]

[ext_resource type="Script" path="res://scenes/main/UI/Debug/groups_debug.gd" id="1_e6soe"]

[node name="GroupsDebug" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_e6soe")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 208.0
offset_bottom = 128.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2
text = "Groups information"

[node name="Close" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
text = "Close"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 40.0
offset_bottom = 128.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
layout_mode = 2

[connection signal="mouse_entered" from="Panel" to="." method="_on_panel_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="." method="_on_panel_mouse_exited"]
[connection signal="pressed" from="Panel/HBoxContainer/Close" to="." method="_on_panel_close"]
